# backend/api/openapi.yaml
@@ -91,6 +91,36 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+    get:
+      description: Check if user is logged in
+      parameters:
+      - name: username
+        in: query
+        required: false
+        description: User's username
+        schema:
+          type: string
+      - name: password
+        in: query
+        required: false
+        description: User's password
+        schema:
+          type: string
+      responses:
+        200:
+          description: User response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        404:
+          description: Unable to authenticate
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   schemas:
